ja/15.10/api/api-cache.rst
==========
キャッシュAPI
==========

このドキュメントでは、 |Fess| の v2 キャッシュ API について説明します。
共通のレスポンスエンベロープ・エラーモデル・CSRF については :doc:`api-overview` を参照してください。

ベースURLは ``http://<Server Name>/api/v2/`` です（ローカル環境の例: ``http://localhost:8080/api/v2`` ）。

キャッシュされたドキュメントの取得
==============================

リクエスト
--------

==================  ====================================================
HTTPメソッド         GET
エンドポイント        ``/api/v2/cache/{docId}``
==================  ====================================================

クロール時に保存されたドキュメントのキャッシュ HTML を返します。 ``hq`` を指定した場合は、該当する語にハイライトが適用されます。

このエンドポイントは検索と同じ権限（ロール）フィルタリングを適用します。呼び出し元のロールで参照できないドキュメントは、存在しない場合と同様に ``not_found`` (404) になります。

ログイン必須設定（システム設定の「ログイン必須」）が有効で呼び出し元が匿名の場合は、 ``auth_required`` (401) になります。

リクエストパラメーター
-----------------

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: リクエストパラメーター

   * - ``docId``
     - ドキュメント識別子（path, 必須, パターン ``^[A-Za-z0-9_-]+$`` ）。
   * - ``hq``
     - ハイライト対象の語（query）。指定すると、キャッシュ HTML 中の該当語がハイライト用のタグで囲まれます。繰り返し指定して複数の語を渡せます（配列）。

表: リクエストパラメーター

レスポンス
--------

成功時（200）は、共通エンベロープの ``response`` 直下に以下のフィールドが返ります。

::

    {
      "response": {
        "status": 0,
        "doc_id": "a1b2c3d4e5f6",
        "mimetype": "text/html",
        "content": "<html><body>...</body></html>",
        "url": "https://example.com/",
        "created": "2024-05-31T12:00:00.000Z",
        "charset": "UTF-8"
      }
    }

各フィールドについては以下の通りです。

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: レスポンスフィールド

   * - ``doc_id``
     - ドキュメント ID（str）。
   * - ``mimetype``
     - レスポンス本文の MIME タイプ（str）。常に ``text/html`` で固定です。
   * - ``content``
     - キャッシュされた HTML 本文（str）。 ``hq`` を指定した場合は、該当語がハイライトされます。
   * - ``url``
     - ドキュメントの URL（str）。 ``url_link`` フィールドがあればその値を、なければインデックスの ``url`` フィールドの値を返します。どちらも無い場合は省略されます。
   * - ``created``
     - ドキュメントの作成日時（str, ISO 8601 形式。例: ``2024-05-31T12:00:00.000Z`` ）。インデックスに値が無いときは省略されます。
   * - ``charset``
     - ドキュメントの mimetype から解析した文字セット（str）。ない場合は ``UTF-8`` が既定値です。

表: レスポンスフィールド

エラーレスポンス
------------

エラーモデルの詳細は :doc:`api-overview` を参照してください。このエンドポイントが返す HTTP ステータスは以下の通りです。

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: エラーレスポンス

   * - ステータスコード
     - 説明
   * - 400 Bad Request
     - リクエストが不正な場合。
   * - 401 Unauthorized
     - 認証が必要な場合（ログイン必須設定が有効で匿名の呼び出し元）。
   * - 404 Not Found
     - ドキュメントが存在しない、キャッシュ本文が無い、または呼び出し元の権限で参照できない場合。
   * - 405 Method Not Allowed
     - HTTP メソッドが許可されていない場合。
   * - 500 Internal Server Error
     - サーバー内部エラーが発生した場合。

表: エラーレスポンス
